--- a/index.html
+++ b/index.html
@@ -39,28 +39,16 @@
         <!-- Name -->
         <div class="container">
             <div class="jumbotron jumbotron-fluid">
-                <div class="row align-items-center">
-                    <div class="col-md-6">
-                        <h1 class="display-3 name">I'm Saurabh.</h1>
-                        <p class="text-muted lead">a guy who loves web designing, machine learning, and Japanese Language and Icecream 🍨😁.</p>
-                    </div>
-                    <div class="col-md-4 text-center">
-                        <img src="images/saurabh.png" alt="avatar">
-                    </div>
-
-                </div>
+                <h1 class="hello text-center">Hello.</h1>
+                <p class="text-muted lead desc text-center">I'm Saurabh Sutar, an Indian bilingual programmer.</p>
             </div>
-
         </div>
-        </div>
-
+        <!-- I'm Saurabh Sutar, a guy from India who loves web designing, machine learning, Japanese Language and Icecream. 🍨 -->
     </section>
     <section id="about">
         <div class="container">
-            <h3 class="heading">section</h3>
 
         </div>
-
     </section>
 
     <!-- Bootstrap JS -->
